doc/windows/VB6.0/32bit/multi_card/gts.bas


Public Declare Function GT_SetSoftLimit Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal positive As Long, ByVal negative As Long) As Integer
Public Declare Function GT_GetSoftLimit Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pPositive As Long, ByRef pNegative As Long) As Integer
Public Declare Function GT_SetAxisBand Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal band As Long, ByVal time As Long) As Integer
Public Declare Function GT_GetAxisBand Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pBand As Long, ByRef pTime As Long) As Integer
Public Declare Function GT_SetBacklash Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal compValue As Long, ByVal compChangeValue As Double, ByVal compDir As Long) As Integer
Public Declare Function GT_GetBacklash Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pCompValue As Long, ByRef pCompChangeValue As Double, ByRef pCompDir As Long) As Integer
Public Declare Function GT_SetLeadScrewComp Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal n As Integer, ByVal startPos As Long, ByVal lenPos As Long, ByRef pCompPos As Long, ByRef pCompNeg As Long) As Integer
Public Declare Function GT_EnableLeadScrewComp Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByVal mode As Integer) As Integer
Public Declare Function GT_GetCompensate Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pPitchError As Double, ByRef pCrossError As Double, ByRef pBacklashError As Double, ByRef pEncPos As Double, ByRef pPrfPos As Double) As Integer

Public Declare Function GT_EnableGantry Lib "gts.dll" (ByVal cardNum As Integer,ByVal gantryMaster As Integer, ByVal gantrySlave As Integer, ByVal masterKp As Double, ByVal slaveKp As Double) As Integer
Public Declare Function GT_DisableGantry Lib "gts.dll" (ByVal cardNum As Integer) As Integer
Public Declare Function GT_SetGantryErrLmt Lib "gts.dll" (ByVal cardNum As Integer,ByVal gantryErrLmt As Long) As Integer
Public Declare Function GT_GetGantryErrLmt Lib "gts.dll" (ByVal cardNum As Integer,ByRef pGantryErrLmt As Long) As Integer
Public Declare Function GT_ZeroGantryPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal gantryMaster As Integer, ByVal gantrySlave As Integer) As Integer

Public Declare Function GT_GetPrfPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetPrfVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetPrfAcc Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetPrfMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pValue As Long, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer

Public Declare Function GT_GetAxisPrfPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisPrfVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisPrfAcc Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisEncPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisEncVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisEncAcc Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer
Public Declare Function GT_GetAxisError Lib "gts.dll" (ByVal cardNum As Integer,ByVal axis As Integer, ByRef pValue As Double, Optional ByVal count As Integer = 1, Optional ByRef pClock As Long = 0) As Integer

Public Declare Function GT_SetLongVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal index As Integer, ByVal value As Long) As Integer
Public Declare Function GT_GetLongVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal index As Integer, ByRef pValue As Long) As Integer
Public Declare Function GT_SetDoubleVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal index As Integer, ByVal value As Double) As Integer
Public Declare Function GT_GetDoubleVar Lib "gts.dll" (ByVal cardNum As Integer,ByVal index As Integer, ByRef pValue As Double) As Integer

Public Declare Function GT_SetControlFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal index As Integer) As Integer
Public Declare Function GT_GetControlFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByRef pIndex As Integer) As Integer

Public Declare Function GT_SetPid Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal index As Integer, ByRef pPid As TPid) As Integer
Public Declare Function GT_GetPid Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal index As Integer, ByRef pPid As TPid) As Integer

Public Declare Function GT_SetKvffFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal index As Integer, ByVal kvffFilterExp As Integer, ByVal accMax As Double) As Integer
Public Declare Function GT_GetKvffFilter Lib "gts.dll" (ByVal cardNum As Integer,ByVal control As Integer, ByVal index As Integer, ByRef pKvffFilterExp As Integer, ByRef pAccMax As Double) As Integer

Public Declare Function GT_Update Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long) As Integer
Public Declare Function GT_SetPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal pos As Long) As Integer
Public Declare Function GT_GetPos Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPos As Long) As Integer
Public Declare Function GT_SetVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal vel As Double) As Integer
Public Declare Function GT_GetVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pVel As Double) As Integer

Public Declare Function GT_PrfTrap Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer) As Integer
Public Declare Function GT_SetTrapPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPrm As TTrapPrm) As Integer
Public Declare Function GT_GetTrapPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPrm As TTrapPrm) As Integer

Public Declare Function GT_PrfJog Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer) As Integer
Public Declare Function GT_SetJogPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPrm As TJogPrm) As Integer
Public Declare Function GT_GetJogPrm Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPrm As TJogPrm) As Integer

Public Declare Function GT_PrfPt Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, Optional ByVal mode As Integer = PT_MODE_STATIC) As Integer
Public Declare Function GT_SetPtLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal ptLoop As Long) As Integer
Public Declare Function GT_GetPtLoop Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pLoop As Long) As Integer
Public Declare Function GT_PtSpace Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pSpace As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_PtData Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal pos As Double, ByVal time As Long, Optional ByVal ptType As Integer = PT_SEGMENT_NORMAL, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_PtDataWN Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal pos As Double, ByVal time As Long, Optional ByVal ptType As Integer = PT_SEGMENT_NORMAL, Optional ByVal segNum As Long = 0, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_PtClear Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, Optional ByVal fifo As Integer = 0) As Integer
Public Declare Function GT_PtStart Lib "gts.dll" (ByVal cardNum As Integer,ByVal mask As Long, Optional ByVal fifoOption As Long = 0) As Integer
Public Declare Function GT_SetPtMemory Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal memory As Integer) As Integer
Public Declare Function GT_GetPtMemory Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pMemory As Integer) As Integer
Public Declare Function GT_PtGetSegNum Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pSegNum As Long) As Integer
Public Declare Function GT_SetPtPrecisionMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal precisionMode As Integer) As Integer
Public Declare Function GT_GetPtPrecisionMode Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef pPrecisionMode As Integer) As Integer
Public Declare Function GT_SetPtVel Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal velLast As Double, ByVal fifo As Integer) As Integer
Public Declare Function GT_SetPtLink Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal fifo As Integer, ByVal list As Integer) As Integer
Public Declare Function GT_GetPtLink Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByRef fifo As Integer, ByRef pList As Integer) As Integer
Public Declare Function GT_PtDoBit Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal doType As Integer, ByVal index As Integer, ByVal value As Integer, ByVal fifo As Integer) As Integer
Public Declare Function GT_PtAo Lib "gts.dll" (ByVal cardNum As Integer,ByVal profile As Integer, ByVal aoType As Integer, ByVal index As Integer, ByVal value As Double, ByVal fifo As Integer) As Integer
